# mapbox-icu

./: CMakeLists.txt
cmake/: icudata.cmake  icui18n.cmake  icuuc.cmake
icu4c/source/data/: pkgdata.osx.inc
icu4c/source/i18n/: listformatter.cpp
